[gd_scene load_steps=12 format=3 uid="uid://wrmqgco20q5r"]

[ext_resource type="PackedScene" uid="uid://becekjbr5mdjl" path="res://Objects/Terrain3D/terrain3D.tscn" id="3_1he4n"]
[ext_resource type="PackedScene" uid="uid://cnpjr2qs65c5s" path="res://Components/Camera/camera.tscn" id="3_ag1d7"]
[ext_resource type="Script" path="res://Scenes/vehicle_body_3d.gd" id="3_ffysl"]
[ext_resource type="PackedScene" uid="uid://c4ui8j2t8glw0" path="res://Components/Turret/turret.tscn" id="4_wmmot"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_enxu1"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_tdlhe"]
sky_material = SubResource("ProceduralSkyMaterial_enxu1")

[sub_resource type="Environment" id="Environment_f0lbo"]
background_mode = 2
sky = SubResource("Sky_tdlhe")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_fdlp1"]
size = Vector2(10, 10)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_l2bx2"]

[sub_resource type="BoxMesh" id="BoxMesh_q4hls"]
size = Vector3(1, 0.5, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_s75bq"]
size = Vector3(1, 0.407715, 1.97021)

[node name="TestMainScene" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_f0lbo")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="GroundPlane" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_fdlp1")

[node name="StaticBody3D" type="StaticBody3D" parent="GroundPlane"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="GroundPlane/StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_l2bx2")

[node name="Terrain3D" parent="." instance=ExtResource("3_1he4n")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
xsize = 200
zsize = 200

[node name="VehicleBody3D" type="VehicleBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.26883, 7.17701, 11.3943)
script = ExtResource("3_ffysl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.227592, 0)
mesh = SubResource("BoxMesh_q4hls")

[node name="BackWheelRight" type="VehicleWheel3D" parent="VehicleBody3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1)
use_as_traction = true

[node name="BackWheelRight2" type="VehicleWheel3D" parent="VehicleBody3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
use_as_traction = true

[node name="BackWheelLeft" type="VehicleWheel3D" parent="VehicleBody3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)
use_as_traction = true

[node name="BackWheelLeft2" type="VehicleWheel3D" parent="VehicleBody3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
use_as_traction = true

[node name="FrontWheelRight" type="VehicleWheel3D" parent="VehicleBody3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1)
use_as_traction = true

[node name="FrontWheelLeft" type="VehicleWheel3D" parent="VehicleBody3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1)
use_as_traction = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.296143, 0.0310059)
shape = SubResource("BoxShape3D_s75bq")

[node name="CameraRoot" parent="VehicleBody3D/CollisionShape3D" instance=ExtResource("3_ag1d7")]

[node name="Turret" parent="VehicleBody3D" node_paths=PackedStringArray("aimer") instance=ExtResource("4_wmmot")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.629412, 0)
aimer = NodePath("../CollisionShape3D/CameraRoot")
